packages/ecommerce/src/shopify/components/Order/OrderCard.less
:local {
    .orderCard {
        margin-bottom: var(--spacing-xs);
        padding: var(--spacing-sm) var(--spacing-md);

        &::after {
            pointer-events: none;
        }
    }

    .productImageWrapper {
        position: relative;
        width: 32px;
        height: 32px;
        border-radius: 4px;
        overflow: hidden;
        background-color: var(--surface-neutral-primary);
    }

    .productImage {
        width: 100%;
        height: 100%;
        object-fit: cover;
        display: block;
    }

    .moreItemsIndicator {
        position: absolute;
        top: 0;
        left: 0;
        display: flex;
        align-items: center;
        justify-content: center;
        width: 100%;
        height: 100%;
        border-radius: 4px;
        background-color: rgba(34, 44, 63, 0.5);
        color: var(--static-default-white);
        font-size: 12px;
        font-weight: 600;
    }

    .dateText {
        color: var(--content-neutral-secondary);
    }

    .iconWrapper {
        display: inline-flex;
        color: var(--content-neutral-secondary);
    }

    .noWrap {
        white-space: nowrap;
    }
}

